fix line wrapping

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ html, body {
 
 .term {
   font-family: 'Courier New', Courier, monospace;
-  min-width: 370px;
   color: #fafafa;
   line-height: 1.2em;
   font-size: 15px;
@@ -14,6 +13,7 @@ html, body {
   height: 100%;
   word-wrap: break-word;
   white-space: pre-wrap;
+  box-sizing: border-box;
 }
 
 .input {
